; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/crypto/extr_seqiv.c_seqiv_aead_complete.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/crypto/extr_seqiv.c_seqiv_aead_complete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.crypto_async_request = type { %struct.aead_givcrypt_request* }
%struct.aead_givcrypt_request = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.crypto_async_request*, i32)* @seqiv_aead_complete to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @seqiv_aead_complete(%struct.crypto_async_request* %0, i32 %1) #0 {
  %3 = alloca %struct.crypto_async_request*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.aead_givcrypt_request*, align 8
  store %struct.crypto_async_request* %0, %struct.crypto_async_request** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.crypto_async_request*, %struct.crypto_async_request** %3, align 8
  %7 = getelementptr inbounds %struct.crypto_async_request, %struct.crypto_async_request* %6, i32 0, i32 0
  %8 = load %struct.aead_givcrypt_request*, %struct.aead_givcrypt_request** %7, align 8
  store %struct.aead_givcrypt_request* %8, %struct.aead_givcrypt_request** %5, align 8
  %9 = load %struct.aead_givcrypt_request*, %struct.aead_givcrypt_request** %5, align 8
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @seqiv_aead_complete2(%struct.aead_givcrypt_request* %9, i32 %10)
  %12 = load %struct.aead_givcrypt_request*, %struct.aead_givcrypt_request** %5, align 8
  %13 = load i32, i32* %4, align 4
  %14 = call i32 @aead_givcrypt_complete(%struct.aead_givcrypt_request* %12, i32 %13)
  ret void
}

declare dso_local i32 @seqiv_aead_complete2(%struct.aead_givcrypt_request*, i32) #1

declare dso_local i32 @aead_givcrypt_complete(%struct.aead_givcrypt_request*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
